stopped words wrapping with hyphens

--- a/blogs/blog-styles.css
+++ b/blogs/blog-styles.css
@@ -178,10 +178,15 @@ th {
   text-align: right;
 }
 
-p {
+/* p {
   word-break: break-word;
   word-wrap: break-word;
   hyphens: auto;
+} */
+
+p {
+  word-break: break-word;
+  word-wrap: break-word;
 }
 
 img, video {
